[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-telegram-bot-nodes"
version = "1.0.0"
description = "ComfyUI custom nodes for Telegram bot integration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "python-telegram-bot>=20.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/ComfyUI-telegram-bot-node"
Repository = "https://github.com/yourusername/ComfyUI-telegram-bot-node"
Issues = "https://github.com/yourusername/ComfyUI-telegram-bot-node/issues"
